--- a/style.css
+++ b/style.css
@@ -40,3 +40,21 @@
     padding: 2%;
     margin-left: 2px;
 }
+
+.main__box .box__one .box__three{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.main__box .box__one .box__three span{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.main__box .box__one .box__three span button{
+    width: 20%;
+    padding: 2%;
+    margin-left: 2px;
+}
